datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        String    @id @default(cuid())
  firstname String?
  lastname  String?
  email     String    @unique
  password  String
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?
  roles     Role[]
}

model Role {
  id          Int          @id @default(autoincrement())
  name        String       @unique
  description String?
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  deletedAt   DateTime?
  permissions Permission[]
  users       User[]
}

model Permission {
  id          Int              @id @default(autoincrement())
  description String?
  action      PermissionAction @default(READ)
  subject     String
  condition   String?
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt
  deletedAt   DateTime?
  roles       Role[]

  @@unique([action, subject])
}

enum PermissionAction {
  MANAGE
  CREATE
  READ
  UPDATE
  DELETE
}
