//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  firstname String
  lastname String
  email String [unique, not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  roles Role [not null]
}

Table Role {
  id Int [pk, increment]
  name String [unique, not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  permissions Permission [not null]
  users User [not null]
}

Table Permission {
  id Int [pk, increment]
  description String
  action PermissionAction [not null, default: 'READ']
  subject String [not null]
  condition String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  roles Role [not null]

  indexes {
    (action, subject) [unique]
  }
}

Table RoleToUser {
  rolesId Int [ref: > Role.id]
  usersId String [ref: > User.id]
}

Table PermissionToRole {
  permissionsId Int [ref: > Permission.id]
  rolesId Int [ref: > Role.id]
}

Enum PermissionAction {
  MANAGE
  CREATE
  READ
  UPDATE
  DELETE
}